# raylib-cpp-template

./: .gitignore  CMakeLists.txt  README.md  mingw-toolchain.cmake
.github/workflows/: cmake-multi-platform.yml
src/: main.cxx
src/include/: WindowConsts.h
src/test/: tests_main.cxx
